Collect-TV-20180201/src/objects/Local_Council_Form__c.object
<CustomObject>
    <description>Stores all of the TECHNET Local Council registration forms.</description>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Group_Meeting__c</fullName>
        <description>Date when the group first met</description>
        <label>Date of First Group Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Submission__c</fullName>
        <description>Date that the form was submitted</description>
        <label>Date of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Center__c</fullName>
        <label>Distribution Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Description__c</fullName>
        <description>A brief description of the group.</description>
        <label>Group Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>Name for the Local Council group.</description>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Number__c</fullName>
        <label>Region Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_of_Individual_Submitting_Request__c</fullName>
        <description>Title of the individual who is submitting the form.</description>
        <label>Title of Individual Submitting Request</label>
        <picklist>
            <picklistValues>
                <fullName>Commercial Account Manager (CAM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Sales Manager (CSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Sales Manager (TSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Local Council Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TNETChatterGroupApprover_Local_Council_Form</fullName>
        <filterScope>Queue</filterScope>
        <label>TNETChatterGroupApprover</label>
        <queue>TNETChatterGroupApprover</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Local Council Form Name</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>Company_Owned</fullName>
        <active>true</active>
        <label>Company Owned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Independent</fullName>
        <active>true</active>
        <label>Independent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shared_Market</fullName>
        <active>true</active>
        <label>Shared Market</label>
    </recordTypes>
    <recordTypes>
        <fullName>WorldPac</fullName>
        <active>true</active>
        <label>WorldPac</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>